<resources>
    <string name="app_name">HomeCommerce</string>
    <string name="new_product">Sản phẩm mới nhất</string>
    <string name="view_more">Xem thêm</string>
    <string name="top_find">Top Tìm Kiếm</string>
    <string name="top_seller">Top Người Bán</string>
    <string name="top_product">Top Sản phẩm</string>
    <string name="suggest_you">Gợi Ý Cho Bạn</string>
    <string name="phuong_le">Phương Lê</string>
    <string name="description">description</string>
    <string name="todo">TODO</string>
    <string name="ao">Áo</string>
    <string name="hello">[Hello]</string>
    <string name="_1700000">1700000</string>
    <string name="vi_t_nam">Việt nam</string>
    <string name="b_n_120">Đã bán 120</string>
    <string name="mutine">MUTINE</string>
    <string name="xem_shop">Xem shop</string>
    <string name="_1_700_000">1.700.000</string>
    <string name="discount">20%</string>
    <string name="_20">20%</string>
    <string name="s_follow">%s Theo dõi</string>
    <string name="view_succinct">Rút gọn</string>
    <string name="see_all">Xem tất cả</string>
    <string name="text_new">New</string>
    <string name="s_follow_count">%s lượt theo dõi</string>
    <string name="liked">Đã thích</string>
    <string name="unliked">Bỏ thích</string>
    <string name="today">Hôm nay</string>
    <string name="vnpay">VNPay</string>
    <string name="momo">Momo</string>
    <string name="cash">Tiền mặt</string>
    <string name="korea">Hàn Quốc</string>
    <string name="viet_nam">Việt Nam</string>
    <string name="sold_s">Đã bán %s</string>
    <string name="d_product">%d sản phẩm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sex">Giới tính</string>
    <string name="age">Độ tuổi</string>
    <string name="size">Kích cỡ</string>
    <string name="rermission_denied">Truy cập bị từ chối</string>
    <string name="msg_permission_setting">Vui lòng cho phép BIDU truy cập camera và thư viện hình ảnh để sử dụng trong ứng dụng</string>
    <string name="msg_permission_setting_negative">Tôi đã hiểu</string>
    <string name="msg_permission_setting_positive">Cấp quyền</string>
    <string name="error_code">Lỗi %d</string>
    <string name="error_server">Không thể kết nối tới máy chủ. Vui lòng thử lại sau.</string>
    <string name="error_network">Thiết bị của bạn chưa kết nối với internet. Vui lòng kiểm tra và thử lại.</string>
    <string name="error_authorization">Phiên đăng nhập đã hết hạn. Vui lòng đăng nhập lại.</string>
    <string name="error_data_io">Đã xảy ra lỗi (IOException). Vui lòng thử lại sau.</string>
    <string name="error_data">Đã xảy ra lỗi dữ liệu. Vui lòng thử lại sau.</string>
    <string name="category_not_found_please_again">Không tìm thấy danh mục. Vui lòng thử lại.</string>
    <string name="o">Áo</string>
</resources>