<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:padding="4dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivNewProduct"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/newproduct"
            android:scaleType="centerCrop" />
        <ImageView
            android:layout_marginTop="5.5dp"
            android:layout_marginStart="120dp"
            android:src="@drawable/ic_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <TextView
        android:textColor="@color/nameProduct"
        android:id="@+id/tvNameNewProduct"
        android:textSize="12sp"
        android:layout_marginTop="5.75dp"
        android:maxLines="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_medium"
        android:text="@string/hello"/>

    <TextView
        android:textColor="@color/nameProduct"
        android:id="@+id/tvPriceNewProduct"
        android:textSize="14sp"
        android:text="@string/_1700000"
        android:fontFamily="@font/lexend_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_location"
            android:layout_width="7.08dp"
            android:layout_height="8.33dp"/>
        <TextView
            android:textColor="@color/nameProduct"
            android:id="@+id/tvCountry"
            android:textSize="10sp"
            android:text="@string/vi_t_nam"
            android:fontFamily="@font/lexend_medium"
            android:layout_gravity="center"
            android:layout_marginStart="3.75dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />
    </LinearLayout>
    <TextView
        android:textSize="10sp"
        android:text="@string/b_n_120"
        android:layout_marginTop="4dp"
        android:textColor="@color/seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_medium"
        tools:ignore="SmallSp" />
</LinearLayout>