<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:fitsSystemWindows="true"
        android:background="#FFFFFF">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/backgroundColorWhite"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColorWhite"
                android:fitsSystemWindows="true">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayoutSystemBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="6dp"
                    android:background="@color/staticColorWhite30"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tabIndicatorColor="@color/staticColorWhite"
                    app:tabIndicatorHeight="2dp"
                    app:tabMaxWidth="24dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorTransparent"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTransparent">

                    <ImageView
                        android:id="@+id/ivSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_margin="8dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivShop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_margin="8dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_shop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivBell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_bell"
                        app:layout_constraintBottom_toBottomOf="@id/ivShop"
                        app:layout_constraintEnd_toStartOf="@id/ivShop"
                        app:layout_constraintTop_toTopOf="@id/ivShop" />

                    <ImageView
                        android:id="@+id/ivMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_message"
                        app:layout_constraintBottom_toBottomOf="@id/ivShop"
                        app:layout_constraintEnd_toStartOf="@id/ivBell"
                        app:layout_constraintTop_toTopOf="@id/ivShop" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerAd"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:fitsSystemWindows="true"
                app:layout_anchor="@+id/appBarLayout"
                app:layout_anchorGravity="center"
                app:layout_collapseMode="parallax" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:overScrollMode="never"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerVoucher"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayoutVoucher"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-5.15dp"
                    android:background="@drawable/tablayout_selected" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:orientation="vertical"
                android:paddingStart="6dp"
                tools:ignore="RtlSymmetry">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvNewProduct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="@string/new_product"
                        android:textColor="@color/nameProduct"
                        android:textSize="17sp"
                        android:fontFamily="@font/lexend_bold"
                        tools:ignore="RtlSymmetry" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="44dp"
                            android:fontFamily="@font/lexend_regular"
                            android:gravity="center"
                            android:text="@string/view_more"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="7dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="17dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_seemore_pink" />
                    </RelativeLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvNewProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="14dp"
                android:background="#f1f1f1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="6dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/top_find"
                    android:textColor="@color/nameProduct"
                    android:textSize="17sp"
                    android:fontFamily="@font/lexend_bold"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="44dp"
                        android:gravity="center"
                        android:text="@string/view_more"
                        android:fontFamily="@font/lexend_regular"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="7dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="17dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_seemore_pink" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTopKey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:paddingStart="6dp"
                android:overScrollMode="never"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="#f1f1f1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingStart="6dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tvCountTopSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/top_seller"
                    android:textColor="@color/nameProduct"
                    android:textSize="17sp"
                    android:fontFamily="@font/lexend_bold"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTopSeller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="6dp"
                android:overScrollMode="never"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="14dp"
                android:background="#f1f1f1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingStart="6dp"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tvTopProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/top_product"
                    android:textColor="@color/nameProduct"
                    android:textSize="17sp"
                    android:fontFamily="@font/lexend_bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTopProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="6dp"
                android:overScrollMode="never"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="14dp"
                android:background="#f1f1f1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingStart="6dp"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tvSuggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/suggest_you"
                    android:textColor="@color/nameProduct"
                    android:textSize="17sp"
                    android:fontFamily="@font/lexend_bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="44dp"
                        android:gravity="center"
                        android:text="@string/view_more"
                        android:textSize="12sp"
                        android:fontFamily="@font/lexend_regular"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="7dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="17dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_seemore_pink" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvSuggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="11dp"
                android:paddingEnd="12dp"
                android:overScrollMode="never"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>